{

  "loginPage": "This is just a normal string.",
  "login": "login",
  "password": "Password",
  "singIn": "SingIn",
  "singUp": "SingUp",
  "cPassword": "Confirm password",

  "load": "loading...",
  "news": "News",
  "lPage": "Last page",
  "nPage": "Next page",
  "fTitle": "Favorite",

  "read": "Read more..",
  "title": "Bitcoin",

  "home": "Home",
  "search": "Search",

  "lNews": "Latest news",

  "sTitle": "Settings",
  "dMode": "Dark Mode",
  "cFontSize": "Change font size :",
  "aUs": "About Us",
  "nApp": "News App",
  "wAw": "Who are we",
  "wAwD": "What are we doing",
  "titleS": "Support",
  "emptyText": "Enter your massage"





}